--- a/dl1 v5/09-small-models-road-to-the-top-part-2.ipynb
+++ b/dl1 v5/09-small-models-road-to-the-top-part-2.ipynb
@@ -799,29 +799,11 @@
     "                  file='small-models-road-to-the-top-part-2.ipynb',\n",
     "                  competition=comp, private=True, gpu=True)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9ed54c9",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5a4838e",
-   "metadata": {},
-   "source": [
-    "We've made a big step today, despite just using a single model that trains in under 20 minutes even on Kaggle's rather under-powered machines. Next time, we'll try scaling up to some bigger models and doing some ensembling.\n",
-    "\n",
-    "If you found this notebook useful, please remember to click the little up-arrow at the top to upvote it, since I like to know when people have found my work useful, and it helps others find it too. And if you have any questions or comments, please pop them below -- I read every comment I receive!"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -835,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
@@ -849,6 +831,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e317f94b6b73150e99c62b97d7df0975be5503f6547aa49064c1cbbd5b7022bf"
+   }
   }
  },
  "nbformat": 4,
